# Tusky

./: .dockerignore  .editorconfig  .env.dev  .gitignore  .gitmodules  Dockerfile  Dockerfile.web  README.md  _tests_pre_start.py  alembic.ini  docker-compose.yaml  docker-compose.yml  main.go  main.py  manage.py  plpython3u.py  pyproject.toml  requirements.txt  service.go  transport.go
.github/workflows/: black.yml
accounts/: README.md  main.py  pyproject.toml
accounts/templates/: password.html  signin.html
app/: __init__.py  actions.py  core.py  crud.py  database.py  db.py  dependencies.py  exceptions.py  main.py  models.py  routes.py  schema.py  schemas.py  types.py  views.py
app/routes/: __init__.py  _depends.py  api.py  depends.py  deps.py  public.py  views.py  websocket.py
app/routes/api/: __init__.py  login.py  room.py  rooms.py  users.py
app/routes/views/: __init__.py
app/routes/websocket/: __init__.py
app/static/js/: websocket.js
app/static/scripts/: register.js  select_room.js  websocket.js
app/templates/: _create_room.html  _header.html  _select_room.html  _tos_warning.html  example_home.html  home.html  login.html  register.html  room.html  root.html
app/tests/: __init__.py  conftest.py  utils.py
app/tests/routes/api/: test_users.py
backend/: _tests_pre_start.py  _tests_start.sh  _wait_for_it.sh  backend.dockerfile  db.dockerfile  manage.py  pyproject.toml
backend/app/: __init__.py  core.py  crud.py  database.py  exceptions.py  main.py  models.py  plpy_.py  schemas.py
backend/app/routes/: __init__.py  _depends.py  api.py  login.py  quiz.py  quiz_session.py  quiz_sessions.py  quizzes.py  rooms.py  users.py  views.py  websockets.py
backend/app/template/: _base.html
backend/app/tests/: conftest.py
backend/app/tests/routes/api/: test_users.py
client/: client.js  index.html
discriminator/: .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yaml  pyproject.toml  scripts.py  tests.py
example_app/app/: main.py
example_app/app/templates/: index.html
frontend/: .env  .eslintrc.js  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.vue  api.ts  env.ts  main.ts  router.ts  userUtils.ts
frontend/src/_generated_code/: api.ts  base.ts  index.ts  openapi.json
frontend/src/_generated_code/apis/: login-api.ts  quizzes-api.ts  rooms-api.ts  sessions-api.ts  users-api.ts
frontend/src/_generated_code/models/: answer-create.ts  answer-for-student.ts  answer-public.ts  answer-update.ts  answer.ts  body-login-access-token-api-v1-login-access-token-post.ts  httpvalidation-error.ts  index.ts  question-create.ts  question-for-student.ts  question-public.ts  question-update.ts  question.ts  quiz-create.ts  quiz-for-student.ts  quiz-preview.ts  quiz-public.ts  quiz-session-create.ts  quiz-session-update.ts  quiz-session.ts  quiz-update.ts  quiz.ts  room-create.ts  room-public.ts  room-update.ts  room.ts  student-response-create.ts  student-response.ts  token.ts  user-create.ts  user-public.ts  user.ts  validation-error.ts
frontend/src/components/: CorrectAnswerMarker.vue  CreateQuiz.vue  CreateRoom.vue  EditableElement.vue  EditableElementToolbar.vue  EditableQuestion.vue  EnterRoom.vue  HelloWorld.vue  HomePage.vue  NavBar.vue  QuestionEditorActions.vue  Quiz.vue  QuizEditor.vue  QuizPreview.vue  RegistrationAndLogin.vue  Room.vue  RouterComponent.vue  SaveWork.vue  StudentRoom.vue  TeacherQuizSession.vue  TeacherRoom.vue  TeacherSelectionMode.vue  ToSelectionMode.vue
frontend/src/components/_room/quiz/_question/: Question.vue
frontend/src/components/forms/: CreateQuiz.vue  CreateRoom.vue  EnterRoom.vue  RegistrationAndLogin.vue
frontend/src/components/room/: Room.vue  StudentRoom.vue  TeacherRoom.vue  TeacherSelectionMode.vue
frontend/src/components/room/quiz/: Quiz.vue  QuizPreview.vue
frontend/src/components/room/quiz/question/: Question.vue
frontend/src/components/room/quiz/question/answer/: MultipleChoice.vue
frontend/src/interfaces/: index.ts
frontend/src/router/: index.ts
frontend/src/store/: index.ts  state.ts
frontend/src/store/main/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts
frontend/src/views/: 404.vue  Editor.vue  Editor2.vue  Hello.vue  Home.vue  HomeView.vue  Login.vue  RoomView.vue
frontend/src/views/main/: Start.vue
migrations/: README.md  env.py
migrations/versions/: 5e0871ed4172_learning_alembic.py
oauth/: .gitignore  README.md  pyproject.toml
oauth/accounts/: urls.py
oauth/accounts/templates/: base.html
oauth/oauth/: asgi.py  settings.py  urls.py  wsgi.py
oauth/users/: models.py
oauth/users/migrations/: 0001_initial.py
quiz/: views.py
quiz/templates/: _base.html
quizzes/: .gitignore  README.md  backend.Dockerfile  dev.env  docker-compose.yaml  manage.py  pyproject.toml
quizzes/app/: crud.py  database.py  deps.py  external.py  main.py  models.py  schemas.py
quizzes/app/core/: __init__.py  _security.py  _settings.py
quizzes/app/pydantic_json_patch/: __init__.py  _pointer.py  exceptions.py  op.py
quizzes/app/routes/: __init__.py  editor.py
scripts/: Dockerfile.db  Dockerfile.web  README.md  _init.sql  _tests_pre_start.py  _tests_start.sh  _wait-for-it.sh  _wait_for_it.sh  run-codegen.sh  test.sh
server/: main.py  requirements.txt
server/app/templates/: home.html
snowflake/: Dockerfile  README.md  docker-compose.yaml  go.mod  go.sum  main.go
snowflake/clients/python/: __init__.py  pyproject.toml  snowflake.py  tests.py
users/: README.md  manage.py  pyproject.toml
users/server/: __init__.py  _app.py
