[tool.poetry]
name = "tusky"
version = "0.1.0"
description = ""
authors = ["Snapper <learningwithsnapper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "1.4.0b3"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.13.4"
aiofiles = "^0.6.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
