[tool.poetry]
name = "tusky"
version = "0.1.0"
description = ""
authors = ["Snapper Vibes <learningwithsnapper@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.38.0"
grpcio-tools = "^1.38.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
