[tool.poetry]
name = "accounts"
version = "0.1.0"
description = ""
authors = ["Snapper <LearningWithSnapper@gmail.com>"]
license = "The GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
Jinja2 = "^3.0.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
