# pyrpoject.toml sepcifies the build system requirements for python projects
# https://www.python.org/dev/peps/pep-0518/

# Poetry is a python dependancy management tool, similar to pip
[tool.poetry]
name = "tusky"
version = "0.1.0"
description = ""
authors = ["Snapper <learningwithsnapper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
# SQLAlchemy 1.4 is a transition release before features are deprecated in 2.0
SQLAlchemy = "1.4.17"
# Pydantic enforces runtime
pydantic = {extras = ["email", "dotenv"], version = "^1.8.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiofiles = "^0.6.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
psycopg2-binary = "^2.8.6"
# OAuth2 uses "form data" which is handled by python-multipart
python-multipart = "^0.0.5"
click = "^7.1.2"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
jsonpatch = "^1.32"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
tenacity = "^7.0.0"
requests = "^2.25.1"
flake8 = "^3.9.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
