[tool.poetry]
name = "discriminator"
version = "0.1.0"
description = "Microservice providing strings with a unique discriminator"
authors = ["Snapper <LearningWithSnapper@gmail.com>"]
license = "The GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
pydantic = "^1.8.2"
uvicorn = "^0.14.0"
kafka-python = "^2.0.2"
pymongo = "^3.11.4"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
click = "^8.0.1"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
