[tool.poetry]
name = "oauth"
version = "0.1.0"
description = "Tusky's OAuth/OIDC server"
authors = ["Snapper <LearningWithSnapper@gmail.com>"]
license = "GNU General Public License v3"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
django-oauth-toolkit = "^1.5.0"
django-cors-middleware = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
