[tool.poetry]
name = "snowflake"
version = "0.1.0"
description = "Tusky's Snowflake microservice client"
authors = ["Snapper <LearningWithSnapper@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
